<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/option1" android:title="@string/option1"
        android:orderInCategory="101"/>
    <item android:id="@+id/option2" android:title="@string/option2"
        android:orderInCategory="102"/>
    <item android:id="@+id/option3" android:title="@string/option3"
        android:orderInCategory="103"/>
    <item android:id="@+id/option4" android:title="@string/option4"
        android:orderInCategory="104"/>
    <item android:id="@+id/option5" android:title="@string/option5"
        android:orderInCategory="105"/>
    <item android:id="@+id/option6" android:title="@string/option6"
        android:orderInCategory="106"/>
    <item android:id="@+id/option7" android:title="@string/option7"
        android:orderInCategory="107"/>
    <item android:id="@+id/option8" android:title="@string/option8"
        android:orderInCategory="108"/>
    <item android:id="@+id/option9" android:title="@string/option9"
        android:orderInCategory="109"/>
    <item android:id="@+id/option10" android:title="@string/option10"
        android:orderInCategory="120"/>
</menu>